adding navigation links

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Welcome to my Webpage</h1>
     <img src="tyler.jpg" alt="Image of Tyler">
     <p>Come back to see more changes!</p>
+    <a href="https://tylerchiu-mariokart-stats.streamlit.app">Check Out My MarioKart Streamlit App</a>
 </body>
 </html>
