link to Looker Studio

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Welcome to my Webpage</h1>
     <img src="tyler.jpg" alt="Image of Tyler">
     <p>Come back to see more changes!</p>
-    <a href="https://tylerchiu-mariokart-stats.streamlit.app">Check Out My MarioKart Streamlit App</a>
+    <a href="https://tylerchiu-mariokart-stats.streamlit.app">Check Out My MarioKart Streamlit App</a><br>
+    <a href="looker.html">Check Out My Looker Dashboard</a>
 </body>
 </html>
