adding tableau page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <img src="tyler.jpg" alt="Image of Tyler">
     <p>Come back to see more changes!</p>
     <a href="https://tylerchiu-mariokart-stats.streamlit.app">Check Out My MarioKart Streamlit App</a><br>
-    <a href="looker.html">Check Out My Looker Dashboard</a>
+    <a href="looker.html">Check Out My Looker Dashboard</a><br>
+    <a href="tableau.html">Check Out a Tableau Visualization</a><br>
 </body>
 </html>
