--- a/looker.html
+++ b/looker.html
@@ -7,7 +7,7 @@
     <title>Looker Dashboard</title>
 </head>
 <body>
-    <a href="index.html">Back to Main Page</a>
+    <a href="index.html">Back to Main Page</a><br>
     <iframe width="780" height="1040" src="https://lookerstudio.google.com/embed/reporting/be432421-e323-43d7-a85d-50011fb5e0cc/page/Qt9pD" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
 </body>
 </html>
