adding mariokart site

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <h1>Welcome to my Webpage</h1>
-    <img src="tyler.jpg" alt="Image of Tyler">
+    <img src="tyler.jpg" alt="Image of Tyler" height="400" width="600">
     <p>Come back to see more changes!</p>
     <a href="https://tylerchiu-mariokart-stats.streamlit.app">Check Out My MarioKart Streamlit App</a><br>
     <a href="looker.html">Check Out My Looker Dashboard</a><br>
     <a href="tableau.html">Check Out a Tableau Visualization</a><br>
+    <a href="mariokart_site/index.html">Go To MarioKart Analytics Site for GA4</a>
 </body>
 </html>
