--- a/mariokart_site/multi_page/header.html
+++ b/mariokart_site/multi_page/header.html
@@ -26,7 +26,9 @@
         </li>
         <li>
             <a href="Tableau.html">&nbsp;BI Visualizations&nbsp;</a>
-
+        </li>
+        <li>
+            <a href="https://tylerchiu.github.io/GitHubTest/">&nbsp;Back to BI Site&nbsp;</a>
         </li>
     </ul>
 </div>
