--- a/mariokart_site/Media.html
+++ b/mariokart_site/Media.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LSX1CJR97G"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-LSX1CJR97G');
+	</script>
+	
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<meta name="viewport" content="initial-scale=1, width=device-width" />
 	<title>Welcome to the BI Sample Site</title>
